NO-JIRA replace MoreCollectors.toSet with Collectors.toSet